--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     display : flex;
     flex-direction: column;
+    align-items: center;
     margin: 0px;
     padding: 0px;
     background-color: #AAAAAA;
@@ -26,6 +27,10 @@ body {
     justify-content: center;
 }
 
+#clear, #del {
+    background-color: darkgoldenrod;
+}
+
 
 .calculator-container {
     display: flex;
@@ -45,8 +50,22 @@ body {
     border-radius: 25px;
     width: 465px;
     height: 675px;
+    cursor: default;
 
 }
+
+#exponential {
+    font-size: 32px;
+}
+
+#subtract {
+    font-size: 82px;
+}
+
+.subtract_text {
+    padding-bottom: 25px;
+}
+
 
 .screen {
     display: flex;
@@ -101,7 +120,7 @@ body {
     height: 425px;
 }
 
-.btn_1 {
+.btn_1, .btn_2{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +135,19 @@ body {
 
 }
 
-.btn-text {
+.btn-text, #clear, #del{
     font-size: 28px;
+}
+
+#point {
+    font-size: 82px;
+}
+
+#point-text {
+    width: 3px; 
+    height: 3px;
+    border-radius: 50px;
+    background-color: white;
+    border: 1px solid white;
+    color: #999999;
 }
