full decimal functionality, overflow error message.

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
     height: 425px;
 }
 
-.btn_1, .btn_2{
+.btn_1, .btn_2, .btn_3{
     display: flex;
     justify-content: center;
     align-items: center;
